--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:staged": "jest",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
@@ -15,12 +16,12 @@
     "@types/node": "14.14.20",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "eslint": "7.17.0",
-    "eslint-config-standard-with-typescript": "19.0.1",
+    "eslint-config-standard-with-typescript": "^18.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.1.0",
-    "git-commit-msg-linter": "^3.0.0",
+    "git-commit-msg-linter": "3.0.0",
     "husky": "4.3.7",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
