--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
         "outDir":"./dist",
+        "lib": ["es2018"],
         "module":"CommonJS",
-        "target":"es2019",
+        "target":"es2018",
         "esModuleInterop":true,
         "allowJs": true,
     }
