--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "nodemon src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:full": "jest --passWithNoTests  --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -36,6 +36,7 @@
     "husky": "4.3.7",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
+    "nodemon": "2.0.7",
     "sucrase": "3.17.0",
     "supertest": "6.1.1",
     "ts-jest": "26.4.4",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "bcrypt": "5.0.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "fast-glob": "3.2.5",
     "mongodb": "3.6.3",
